--- a/src/main/resources/templates/profile/treeCollections.html
+++ b/src/main/resources/templates/profile/treeCollections.html
@@ -55,9 +55,10 @@
                         <span class="dateCreated">01/02/1969 22:22</span>
                     </section>
                     <section class="infoFooter">
-                        <button class="collectionInfoBtn">Edit</button>
-                        <button class="collectionInfoBtn">Buy</button>
-                        <button class="collectionInfoBtn">Delete</button>
+                        <button class="collectionInfoBtn" onclick="editDesign(this)">Edit</button>
+                        <button class="collectionInfoBtn" onclick="buyDesing()">Buy</button>
+                        <button class="collectionInfoBtn" onclick="deleteDesign()">Delete</button>
+                        <span class="orderId" hidden>0</span>
                     </section>
                 </div>
             </section>
