--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -17,10 +17,15 @@
     <link rel="stylesheet" href="">
     <script th:src="@{/js/familyTree.js}"></script>
     <script th:src="@{/js/login.js}"></script>
+    
+    <script th:src="@{/js/FileSaver.js}"></script>
+    <script th:src="@{/js/saveScreenshot.js}"></script>
+    
     <script th:src="@{/js/saveDesign.js}"></script>
     <script th:src="@{/js/addToBasket.js}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    
 
     <!--  FACEBOOK HEADERS -->
     <!-- You can use Open Graph tags to customize link previews.
@@ -232,7 +237,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
 
                     <button id="saveDesignButton" style="margin: 1vh; padding: 0.5vh; background-color: var(--actionColor);
                      border: none; border-radius: 5px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.75);"
-                            onclick="saveDesign()">
+                            onclick="takeScreenshot()">
                         Save Design
                     </button>
 
