--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -16,10 +16,6 @@
 </head>
 <body>
 <section id="navigationContainer">
-
-    <div id="popupContainer" class="popupContainer">
-        <div id="popup" class="popup"><p id="popupText">Welcome Back!</p></div>
-    </div>
     <!-- Login modal -->
     <div class="modal fade" id="loginModal" role="dialog">
         <div class="modal-dialog loginForm">
@@ -73,8 +69,8 @@
                     <span>Home</span>
                     <hr class="hoverLine">
                 </a>
-                <a href="/aboutUs">
-                    <span>About Us</span>
+                <a href="/productExample">
+                    <span>Product</span>
                     <hr class="hoverLine">
                 </a>
                 <a href="/shoppingBasket"><img th:src="@{~/img/icons/shoppingBasketIcon.svg}" alt="basket"
