--- a/src/main/resources/static/styles/banner.css
+++ b/src/main/resources/static/styles/banner.css
@@ -6,29 +6,30 @@
     background-image: url("../img/images/banner/banner1.svg");
     background-repeat: no-repeat;
     background-position: center;
-    margin-bottom: 3vh;
-    height: 9.3vh;
+    margin-bottom: 3vw;
+    height: 9.3vw;
     width: 21.5vw;
+    z-index: 98;
 }
 
 #familyTreeBanner .curvyText {
     display: inline-block;
-    margin-bottom: 128px;
+    margin-bottom: 4vw;
     color: whitesmoke;
 }
 
 #familyTreeBanner .input
 {
-    min-width: 1vh; /*Needs to scale with parent size, or can probably be removed*/
-    max-width: 10vh; /*Needs to scale with parent size*/
-    max-height: 5vh; /*Needs to scale with parent size*/
+    min-width: 1vw; /*Needs to scale with parent size, or can probably be removed*/
+    max-width: 10vw; /*Needs to scale with parent size*/
+    max-height: 5vw; /*Needs to scale with parent size*/
     overflow: hidden;
     text-align: center;
     font-family: Spectral, sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 1.8vh; /*Needs to scale with parent size*/
-    line-height: 2vh; /*Needs to scale with parent size*/
+    font-size: 1.8vw; /*Needs to scale with parent size*/
+    line-height: 2vw; /*Needs to scale with parent size*/
     color: black;
     border: none;
     padding: 0;
@@ -37,8 +38,8 @@
 
 #familyTreeBanner #bannerText
 {
-    margin-top: 2vh;
-    height: 20vh;
+    margin-top: 2vw;
+    height: 20vw;
     width: 20vw;
 }
 
