--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -247,7 +247,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
 
                     <button id="addToBasket" style="margin: 1vh; padding: 0.5vh; background-color: var(--actionColor);
                      border: none; border-radius: 5px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.75);"
-                            data-toggle="modal" data-target="#addToBasketModal">
+                            data-toggle="modal" data-target="#addToBasketModal" onclick="updatePrice()">
                         Add To Basket
                     </button>
                 </div>
