--- a/src/main/resources/templates/payment/basket.html
+++ b/src/main/resources/templates/payment/basket.html
@@ -91,7 +91,7 @@
                         <input id="termsAndConditionsCheckbox" name="termsAndConditions" type="checkbox" required>
                         I have read the <a href="/termsAndConditions" target="_blank">Terms and Conditions</a>
                     </label>
-                    <button>Accept Order & Pay</button>
+                    <button onclick='window.open("/payment_temp")'>Accept Order & Pay</button>
                 </div>
             </section>
         </div>
