--- a/src/main/resources/templates/payment/basket.html
+++ b/src/main/resources/templates/payment/basket.html
@@ -40,7 +40,7 @@
                     <input type="text" name="inputPostcode" id="inputPostcode" value="2100" maxlength="15"
                            required>
                     <label for="checkboxNewsletter">
-                        <input type="checkbox" name="checkboxNewsletter" id="checkboxNewsletter"> subscribe to
+                        <input type="checkbox" name="checkboxNewsletter" id="checkboxNewsletter"> subscribe to the
                         newsletter
                     </label>
                 </section>
@@ -91,7 +91,7 @@
                         <input id="termsAndConditionsCheckbox" name="termsAndConditions" type="checkbox" required>
                         I have read the <a href="/termsAndConditions" target="_blank">Terms and Conditions</a>
                     </label>
-                    <button onclick='window.open("/payment_temp")'>Accept Order & Pay</button>
+                    <button onclick='pay()'>Accept Order & Pay</button>
                 </div>
             </section>
         </div>
