--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -16,6 +16,10 @@
 </head>
 <body>
 <section id="navigationContainer">
+
+    <div id="popupContainer" class="popupContainer">
+        <div id="popup" class="popup"><p id="popupText">Welcome Back!</p></div>
+    </div>
     <!-- Login modal -->
     <div class="modal fade" id="loginModal" role="dialog">
         <div class="modal-dialog loginForm">
