--- a/src/main/resources/static/styles/productNavbar.css
+++ b/src/main/resources/static/styles/productNavbar.css
@@ -28,7 +28,7 @@
     /* Applies a specific color to any img(and is an svg) that is marked with a class .filterColor */
     /* Hex-to-filter converter: https://codepen.io/sosuke/pen/Pjoqqp */
     /* Current color: #AF6826 */
-    filter: invert(37%) sepia(58%) saturate(621%) hue-rotate(347deg) brightness(105%) contrast(87%);
+    filter: black;
 }
 
 #navBar a
@@ -38,7 +38,7 @@
     height: 4vh;
     width: fit-content;
     padding: 0.5vh 0.6vh;
-    color: var(--navbarMainColor);
+    color: black;
     position: relative; /* Used to align the hoverLine element properly */
     text-decoration: none; /* Boostrap import for the login breaks the decoration and it has to be nullified again*/
 }
@@ -59,8 +59,8 @@
 #navBar a:hover .hoverLine
 {
     display: inline-block;
-    color: var(--navbarMainColor);
-    background-color: var(--navbarMainColor);
+    color: black;
+    background-color: black;
 }
 
 #navBar .icon
