--- a/src/main/resources/templates/home/termsAndConditions.html
+++ b/src/main/resources/templates/home/termsAndConditions.html
@@ -4,8 +4,166 @@
     <meta charset="UTF-8">
     <title>Terms and Conditions</title>
 </head>
-<body>
-<div style="max-width: fit-content; margin: auto; padding-top: 10vh;"><h1>WiP - actual terms will be added soon</h1>
+<body style="background-color: #f2f2f2; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div style="max-width: 40em; margin: auto; padding: 5vh 0; font-size: 16px; line-height: 1.8; text-shadow: 0 1px 0 #ffffff;">
+    <h2>1. INDGÅELSE AF KØBSAFTALE</h2>
+
+    <p>
+        1.1 Vi indgår udelukkende købsaftaler på dansk for så vidt angår de bestillinger, der foretages online på
+        www.Treecreate.dk. Når du bestiller Treecreates varer, indgår du en købsaftale med Treecreate, Hillerødgade 69,
+        3. 2200 København.
+    </p>
+
+    <p>
+        1.2 Ved at klikke ”Accepter og bestil”, afgiver du en bindende bestilling på varerne i din indkøbskurv. Vi
+        sender dig en ordrebekræftelse pr. e-mail, så snart du har indsendt din bestilling.
+        Der indgås en bindende købsaftale, når du modtager en ordrebekræftelse fra os.
+    </p>
+
+    <p>
+        1.3 Der tages forbehold for barken på produktet er fuldstændig fejlfri ved levering. Der tages forbehold for
+        placering af barken (på begge sider, øverst, eller udelukkende en side). Ved eventuelle ønsker kan vi kontaktes,
+        men garanterer ikke at kunne opfylde ønsket.
+        Hvis intet er angivet, forbeholder vi os retten til selv at vælge barkens placering.
+    </p>
+
+    <p>
+        1.4 Det er købers eget ansvar såfremt der forekommer stavefejl på produktet som følge af købers egen
+        fejlskrivning ved bestilling.
+    </p>
+
+
+    <h2>2. LEVERING</h2>
+
+    <p>
+        2.1 Leveringstiden er mellem 5 til 15 arbejdsdage. Arbejdsdage skal forstås som mandag til fredag, inklusiv
+        begge dage, med undtagelse af offentlige fri- og helligdage i Danmark.
+        Levering kan kun ske inden for Danmarks grænser.
+    </p>
+    <p>
+        2.2 Der er fri fragt på alle vare købt igennem Treecreate.dk.
+    </p>
+
+    <h2>3. PRISER OG BETALING</h2>
+
+    <p>
+        3.1 De priser, der fremgår på vores hjemmeside på det tidspunkt, hvor bestillingen afgives, er gældende. De
+        angivne priser er endelige priser (i alt), og inkluderer med andre ord moms i overensstemmelse med den gældende
+        sats.
+        Varerne er Treecreates ejendom indtil den fulde købesum er indbetalt.
+    </p>
+    <p>
+        3.2 Treecreate tilbyder som udgangspunkt følgende betalingsmetoder: kreditkort, visa dankort og mobilpay. Vi
+        forbeholder os retten til at afvise bestemte betalingsmetoder for en given bestilling og til at henvise til
+        andre betalingsmetoder. Vær opmærksom på, at vi kun accepterer betalinger fra konti inden for Den Europæiske
+        Union (EU). Du skal selv dække eventuelle omkostninger pålagt i forbindelse med pengetransaktioner.
+    </p>
+    <p>
+        3.4 Fakturaer modtages udelukkende i elektronisk form.
+    </p>
+    <h2>4. RABATKODER OG INDLØSNING AF RABATKODER</h2>
+
+    <p>
+        4.1 Rabatkoder er rabatter, der bliver uddelt i forbindelse med reklamekampanger og er gyldige inden for en
+        afgrænset tidsperiode. Rabatkoder kan ikke købes.
+    </p>
+    <p>
+        4.2 Rabatkoder kan kun indløses i forbindelse med et køb og kun inden for den angivne specificerede tidsperiode.
+        Vi forbeholder os retten til at ændre eller fjerne rabatkoder, på et hvert angivet tidspunkt, uden nogen former
+        for forudgående varsel.
+    </p>
+    <p>
+        4.3 Værdien af rabatkoden kan ikke udbetales kontant, ligesom værdien heraf ikke bliver forrentet. Rabatkoder
+        kan ikke refunderes, såfremt nogle eller alle de bestilte varer bliver returneret.
+    </p>
+    <p>
+        4.4 Rabatkoder kan kun indløses forud for, at bestillingsprocessen gennemføres. Det er ikke muligt at anvende
+        rabatkoder bagudrettet. Rabatkoder må ikke overføres til tredjeparter. Medmindre andet er udtrykkeligt aftalt,
+        er det ikke muligt at kombinere flere rabatkoder.
+    </p>
+    <p>
+        4.5 Hvis du har brugt en rabatkode i forbindelse med dit køb og ordrens samlede værdi er mindre eller lig med
+        værdien af rabatkoden, som et resultat af, at du efterfølgende har tilbagekaldt en del af din ordre, forbeholder
+        vi os retten til at opkræve dig den oprindelige pris for de varer, du beholder.
+    </p>
+
+    <h2>5. PRODUKT BESKRIVELSE</h2>
+
+    <p>
+    5.1 Når du bestiller via. Treecreate.dk, laver du dit eget design ud fra vores billedfiler. Vi tager os ikke af
+    designets opstilling eller udseende da det er 100 procent op til dig at bestemme hvordan dit design skal se ud.
+    </p>
+    <p>
+    5.2 Når du bestiller får du et stativ lavet af 3mm tykt krydsfiner træ som kan bruges til at holde dit
+    trædesign. Du kan vælge imellem et sæt størrelser som dit design bliver indgraveret på. Alle plader har mindst
+    en side med bark på og er henholdsvis 26mm tykke. Det indgraverede design kan afvige fra det du ser på
+    hjemmesiden med et par millimeter da laser indgraveringens præcision kan variere en smule.
+    </p>
+    <p>
+    5.3 Når du vælger en størrelse, kan produktets størrelse afvige med op til 2 centimeter da barken ikke altid kan
+    reguleres præcist.
+    </p>
+    <p>
+    5.4 Træet som produktet bliver produceret af, vil være udelukkende egetræ. Træets farve kan variere mellem lys
+    og mørkt træ hvilket er naturligt når man arbejder med egetræ.
+    </p>
+
+    <h2>6. FORTRYDELSESRET OG REKLAMERING</h2>
+
+    <p>
+    6.1 Køber har ingen fortrydelsesret da aftalen der indgås, er et bestillingskøb, jf. KBL §2, stk. 1.
+    </p>
+    <p>
+    6.2 Køber har to (2) års reklamationsfrist vedrørende fejl og mangler efter dansk rets almindelige regler
+    </p>
+    <p>
+    6.3 Såfremt køber vil påberåbe sig en mangel, skal køberen gøre Treecreate opmærksom på dette inden for rimelig
+    tid, efter at køberen har opdaget manglen. (Se formular nederst i betingelserne)
+    Såfremt der gives meddelelse inden for to måneder efter, at køberen opdagede manglen, anses dette altid for at
+    være rettidig.
+    </p>
+
+    <h2>7. LOVPLIGTIG ANSVAR FOR MANGLER OG YDERLIGERE INFORMATION</h2>
+
+    <p>
+    7.1 Vores ansvar for mangler bliver reguleret af den relevante lovgivning på området. Derved er købers
+    retsstilling reguleret af den danske købelov.
+    </p>
+    <p>
+    7.2 Det er ikke muligt for unge under 15 år at indgå aftaler med Treecreate.dk. Det er dog muligt for personer
+    er under 18 år, medmindre værgemålsloven foreskriver andet.
+    </p>
+    <p>
+    7.3 Hver kunde er berettiget til at oprette én kundekonto hos Treecreate. Vi forbeholder os retten til at slette
+    to eller flere eksisterende kontoer tilhørende den samme kunde.
+    </p>
+    <p>
+    FORMULAR
+    Underretning om mangler (Hvis du ønsker at underrette os om mangler, bedes du udfylde nedenstående formular og
+    returnere den til os)
+    Att: Treecraete, Hillerødgade 69, 3., 2200 København. e-mail: info@treecreate.dk
+    </p>
+    <p>
+    Jeg/vi (*) giver herved meddelelse om mangler vedrørende de indkøbte varer i henhold til den indgåede købsaftale
+    indgået af mig/os (*):
+    - bestilt den (*)/modtaget den (*)
+    - forbrugerens navn(e)
+    - forbrugerens adresse
+    - dato
+    - beskrivelse af manglen
+    Slut
+    </p>
+    <p>
+    Med venlig hilsen,
+    Treecreate
+    </p>
+    <p>
+    Bestyrelsen:
+    Teodor Jonasson
+    </p>
+    <p>
+    Sidst opdateret: 30.10.2020
+    </p>
 </div>
 </body>
 </html>
