--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -133,7 +133,8 @@
             <div class="section">
                 <span class="title">Contact</span><br>
                 <p>
-                    Email: info@treecreate.net
+                    Email: info@treecreate.net<br>
+                    Phone nr. +45 26 19 23 27
                 </p>
             </div>
             <div class="section">
@@ -148,7 +149,9 @@
             <div class="section">
                 <span class="title">Address</span><br>
                 Denmark<br>
-                Copenhagen
+                Copenhagen<br>
+                Hillerødgade 69, 3.<br>
+                CVR nr. 38 45 31 14
             </div>
         </div>
         <div class="footer-row">
@@ -158,7 +161,13 @@
         </div>
         <div class="footer-row" id="footer-bottom">
             <div class="section">
-                Copyright © 2020 TreeCreate All Rights Reserved.
+                <span>Copyright © 2020 TreeCreate All Rights Reserved.</span>
+                <div>
+                    <img th:src="@{~/img/logos/paymentLogo/dankortLogo.svg}" alt="Dankort" class="icon">
+                    <img th:src="@{~/img/logos/paymentLogo/mastercardLogo.svg}" alt="Mastercard" class="icon">
+                    <img th:src="@{~/img/logos/paymentLogo/visaLogo.svg}" alt="Visa" class="icon">
+                    <img th:src="@{~/img/logos/paymentLogo/mobilePay.svg}" alt="Mobile Pay" class="icon">
+                </div>
             </div>
         </div>
     </nav>
