--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -52,7 +52,7 @@
     <section id="navbarContainer">
         <nav id="navBar">
             <div id="navBar-left">
-                <a href="/index"><img th:src="@{~/img/logos/treecreateLogo/TCTextLogo.svg}"
+                <a href="/productExample"><img th:src="@{~/img/logos/treecreateLogo/TCTextLogo.svg}"
                                       alt="treecreate" id="treecreateLogo" class="filterColor">
                     <hr class="hoverLine">
                 </a>
@@ -70,11 +70,11 @@
                 </a>
             </div>
             <div id="navBar-right">
-                <a href="/index">
+                <a href="/productExample">
                     <span>Home</span>
                     <hr class="hoverLine">
                 </a>
-                <a href="/productExample">
+                <a href="/products">
                     <span>Product</span>
                     <hr class="hoverLine">
                 </a>
