--- a/src/main/resources/static/styles/index.css
+++ b/src/main/resources/static/styles/index.css
@@ -13,7 +13,7 @@ body, html
 
     --mainColor: #F4CBA2;
     --mainSoftColor: rgba(244, 203, 162, 0.10);
-    --navbarMainColor: #AF6826;
+    --navbarMainColor: black;
     --backgroundColor: #F5F2F2;
     --textColor: #000000;
     --actionColor: #EBC6AB;
