--- a/src/main/resources/static/styles/familyTree.css
+++ b/src/main/resources/static/styles/familyTree.css
@@ -20,9 +20,44 @@
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
-    width: 20vw;
+    width: 22vw;
     height: 80vh;
     margin:0 1vw;
+    transform: translateY(15%);
+}
+
+#familyTreeOptionsContainer button
+{
+    margin: 1vh;
+    padding: 0.5vh;
+    background-color: var(--actionColor);
+    color: white; 
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+    width: 7vw;
+}
+
+.largeButton
+{
+    width:15vw !important;
+}
+
+#fontSize
+{
+    flex-direction: row!important;
+    margin-bottom:2vh;
+}
+
+#familyTreeOptionsContainer button:hover
+{
+    transform: scale(0.9);
+    box-shadow: none;
+}
+
+.loadSave
+{
+    display: flex;
 }
 
 #bannerDesignInputContainer
