--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -133,6 +133,7 @@
             <div class="section">
                 <span class="title">Contact</span><br>
                 <p>
+                    TreeCreate CVR nr. 38 45 31 14<br>
                     Email: info@treecreate.net<br>
                     Phone nr. +45 26 19 23 27
                 </p>
@@ -142,6 +143,7 @@
                 Every purchase plants a tree<br>
                 Eco Friendly packaging<br>
                 Produced in Denmark<br>
+                <div style="margin-top:10px;"></div>
                 <img th:src="@{~/img/icons/danishTransportIcon.svg}" alt="Danish Transport" class="icon">
                 <img th:src="@{~/img/icons/ecoPackageIcon.svg}" alt="Eco friendly packaging" class="icon">
                 <img th:src="@{~/img/icons/recyclingIcon.svg}" alt="Recycled" class="icon">
@@ -151,8 +153,14 @@
                 Denmark<br>
                 Copenhagen<br>
                 Hillerødgade 69, 3.<br>
-                CVR nr. 38 45 31 14
             </div>
+        </div>
+        <div class="paymentMethods" style="margin: 1vw;">
+            <h1 class="modal-title">Payment methods: </h1>
+            <img th:src="@{~/img/logos/paymentLogo/dankortLogo.svg}" alt="Dankort" class="icon">
+            <img th:src="@{~/img/logos/paymentLogo/mastercardLogo.svg}" alt="Mastercard" class="icon">
+            <img th:src="@{~/img/logos/paymentLogo/visaLogo.svg}" alt="Visa" class="icon">
+            <img th:src="@{~/img/logos/paymentLogo/mobilePay.svg}" alt="Mobile Pay" class="icon">
         </div>
         <div class="footer-row">
             <div class="section">
@@ -162,12 +170,6 @@
         <div class="footer-row" id="footer-bottom">
             <div class="section">
                 <span>Copyright © 2020 TreeCreate All Rights Reserved.</span>
-                <div>
-                    <img th:src="@{~/img/logos/paymentLogo/dankortLogo.svg}" alt="Dankort" class="icon">
-                    <img th:src="@{~/img/logos/paymentLogo/mastercardLogo.svg}" alt="Mastercard" class="icon">
-                    <img th:src="@{~/img/logos/paymentLogo/visaLogo.svg}" alt="Visa" class="icon">
-                    <img th:src="@{~/img/logos/paymentLogo/mobilePay.svg}" alt="Mobile Pay" class="icon">
-                </div>
             </div>
         </div>
     </nav>
