--- a/src/main/resources/static/styles/productFooter.css
+++ b/src/main/resources/static/styles/productFooter.css
@@ -21,6 +21,7 @@
 {
     height: 4vh;
     width: 4vh;
+    margin: 0 10px;
 }
 
 #footer .section
@@ -46,7 +47,7 @@
 
 #footer-bottom
 {
-    font-size: var(--fontExtraSmall);
+    font-size: var(--fontSmall);
     margin-bottom: 1vh;
 }
 
@@ -54,6 +55,8 @@
 {
     color: black;
     width: 70vw;
+    margin: 0 0 1vh 0;
+
 }
 
 #footer-bottom section
