--- a/src/main/resources/templates/profile/treeCollections.html
+++ b/src/main/resources/templates/profile/treeCollections.html
@@ -58,7 +58,7 @@
                     <section class="infoFooter">
                         <button class="collectionInfoBtn" onclick="editDesign(this)">Edit</button>
                         <button class="collectionInfoBtn" onclick="buyDesing()">Buy</button>
-                        <button class="collectionInfoBtn" onclick="deleteDesign()">Delete</button>
+                        <button class="collectionInfoBtn" onclick="deleteDesign(this)">Delete</button>
                         <span class="orderId" hidden>0</span>
                     </section>
                 </div>
