--- a/src/main/resources/static/styles/banner.css
+++ b/src/main/resources/static/styles/banner.css
@@ -7,7 +7,7 @@
     background-image: url("../img/images/banner/banner1.svg");
     background-repeat: no-repeat;
     background-position: center;
-    margin-bottom: 3vw;
+    margin-bottom: 0;
     height: 9.3vw;
     width: 21.5vw;
     z-index: 97;
